adding newscript for todo and removed div from comment of outputs

--- a/todo.html
+++ b/todo.html
@@ -6,7 +6,7 @@
     <title>ToDo App</title>
     <link rel="stylesheet" href="todo.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Fredoka:wght@700&display=swap"
+      <!-- href="https://fonts.googleapis.com/css2?family=Fredoka:wght@700&display=swap" -->
       rel="stylesheet"
     />
   </head>
@@ -39,7 +39,8 @@
       <button class="reset">Reset</button>
     </div>
 
-    <script src="todo.js"></script>
+    <!-- <script src="todo.js"></script> -->
      <!-- <script src="rough.js"></script> -->
+      <script src="NewtodoScript.js"></script>
   </body>
 </html>
